bk_ida/gccida/g0/combine_reloads
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2154:6: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( this_insn_1[2].fld[0].rtint != -1 ) 
     ^~~~~~~~~~~
     this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2156:20: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
for ( ic = 1; ic < insn_data_0[this_insn_1[2].fld[0].rtint].n_operands; ++ic ) 
                   ^~~~~~~~~~~
                   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2156:32: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
for ( ic = 1; ic < insn_data_0[this_insn_1[2].fld[0].rtint].n_operands; ++ic ) 
                               ^~~~~~~~~~~
                               this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2158:7: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
if ( *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 61 
      ^~~~~~~~~~~
      insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2158:19: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
if ( *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 61 
                  ^~~~~~~~~~~
                  this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2159:5: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
|| *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 43 ) 
    ^~~~~~~~~~~
    insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2159:17: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
|| *insn_data_0[this_insn_1[2].fld[0].rtint].operand[ic].constraint == 43 ) 
                ^~~~~~~~~~~
                this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2164:14: error: use of undeclared identifier 'this_insn_1'; did you mean 'this_insn'?
for ( note = this_insn_1[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
             ^~~~~~~~~~~
             this_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:181:12: note: 'this_insn' declared here
static rtx this_insn;
           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2164:60: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = this_insn_1[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                           ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2196:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v14 = mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2197:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2224:7: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v18 = mode_class_0[*( unsigned __int8 *)( note->fld[0].rtwint + 2)] == MODE_COMPLEX_INT 
      ^~~~~~~~~~~~
      mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2225:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( unsigned __int8 *)( note->fld[0].rtwint + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2269:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v0 = mode_class_0[rld[ib].inmode] == MODE_COMPLEX_INT || mode_class_0[rld[ib].inmode] == MODE_COMPLEX_FLOAT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2269:58: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v0 = mode_class_0[rld[ib].inmode] == MODE_COMPLEX_INT || mode_class_0[rld[ib].inmode] == MODE_COMPLEX_FLOAT 
                                                         ^~~~~~~~~~~~
                                                         mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2284:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/reload.c:2285:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[rld[output_reload].outmode] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
17 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/combine_reloads/src/obj/reload.o] Error 1
